Updated overflow issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -260,7 +260,7 @@ input {
 }
 	.hamburger {
 		display: block;
-		transform: translateX(40%);
+		transform: translateX(10%);
 	}
 
 	input {
